--- a/app/src/main/res/layout/item_image_slide.xml
+++ b/app/src/main/res/layout/item_image_slide.xml
@@ -7,7 +7,7 @@
         android:id="@+id/ivSliderImage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:contentDescription="Bike Image" />
 
 </FrameLayout>
