--- a/app/src/main/res/drawable/placeholder_bike.xml
+++ b/app/src/main/res/drawable/placeholder_bike.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="96dp"
-    android:height="96dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="@color/gray_400">
+    android:width="200dp"
+    android:height="150dp"
+    android:viewportWidth="200"
+    android:viewportHeight="150">
+    
+    <!-- Background -->
     <path
-        android:fillColor="@android:color/white"
-        android:pathData="M15.5,5.5c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM5,12c-2.8,0 -5,2.2 -5,5s2.2,5 5,5 5,-2.2 5,-5 -2.2,-5 -5,-5zM5,15.5c1.4,0 2.5,1.1 2.5,2.5s-1.1,2.5 -2.5,2.5S2.5,19.4 2.5,18s1.1,-2.5 2.5,-2.5zM5.5,11l2.2,-0.76c0.55,-0.19 0.94,-0.74 0.94,-1.33V4.5c0,-0.83 -0.67,-1.5 -1.5,-1.5S5.5,3.67 5.5,4.5v5.41L4,10.45L5.5,11zM18,1c-2.8,0 -5,2.2 -5,5s2.2,5 5,5 5,-2.2 5,-5 -2.2,-5 -5,-5zM18,7.5c-0.8,0 -1.5,-0.7 -1.5,-1.5s0.7,-1.5 1.5,-1.5 1.5,0.7 1.5,1.5 -0.7,1.5 -1.5,1.5z" />
+        android:fillColor="#E2E8F0"
+        android:pathData="M0,0h200v150h-200z"/>
+        
+    <!-- Bike Icon in Center -->
+    <group
+        android:translateX="76"
+        android:translateY="51"
+        android:scaleX="2"
+        android:scaleY="2">
+        <path
+            android:fillColor="#94A3B8"
+            android:pathData="M15.5,5.5c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM5,12c-2.8,0 -5,2.2 -5,5s2.2,5 5,5 5,-2.2 5,-5 -2.2,-5 -5,-5zM5,15.5c1.4,0 2.5,1.1 2.5,2.5s-1.1,2.5 -2.5,2.5S2.5,19.4 2.5,18s1.1,-2.5 2.5,-2.5zM5.5,11l2.2,-0.76c0.55,-0.19 0.94,-0.74 0.94,-1.33V4.5c0,-0.83 -0.67,-1.5 -1.5,-1.5S5.5,3.67 5.5,4.5v5.41L4,10.45L5.5,11zM18,1c-2.8,0 -5,2.2 -5,5s2.2,5 5,5 5,-2.2 5,-5 -2.2,-5 -5,-5zM18,7.5c-0.8,0 -1.5,-0.7 -1.5,-1.5s0.7,-1.5 1.5,-1.5 1.5,0.7 1.5,1.5 -0.7,1.5 -1.5,1.5z" />
+    </group>
 </vector>
