--- a/app/src/main/res/layout/activity_payment_confirmed.xml
+++ b/app/src/main/res/layout/activity_payment_confirmed.xml
@@ -409,7 +409,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Proceed to Bill &amp; Delivery"
+                    android:text="View Documents"
                     android:textColor="@color/text_dark"
                     android:textSize="16sp"
                     android:textStyle="bold"
